# indaga-agent

./: .gitignore  AGENTS.md  CITATION.cff  INSTALL_FOR_AGENTS.md  README.md  llms-full.txt  llms.txt  pyproject.toml
.github/workflows/: ci.yml
docs/: DEPLOY.md  library-capability-plan.md
scripts/: build_llms.sh  install_for_agents.py
skills/: SKILL.md  output-rules.md
skills/analyze/: SKILL.md
skills/circadian/: SKILL.md
skills/conventions/: evidence-envelope.md
skills/decision/: SKILL.md
skills/domains/: SKILL.md
skills/genome/: SKILL.md
skills/grounding/: SKILL.md
skills/health-index/: SKILL.md
skills/journal/: SKILL.md
skills/labs/: SKILL.md
skills/metabolic/: SKILL.md
skills/nutrigenomics/: SKILL.md
skills/synthesis/: SKILL.md
src/indaga/: __init__.py  serialize.py
src/indaga/capabilities/: __init__.py  analyze.py  clock.py  decision.py  domains.py  genome.py  grounding.py  health_index.py  journal.py  labs.py  metabolic.py  nutrigenomics.py  synthesis.py
src/indaga/connectors/: __init__.py  ancestry.py  annotate.py  dna.py  impute.py  pharmcat.py  silver_labs.py  spliceai.py  wearables.py
src/indaga/eval/: __init__.py  allele_safety_eval.py  analyze_eval.py  envelope_eval.py  genome_parity.py
src/indaga/evidence/: __init__.py  confidence_calculus.py  envelope.py
src/indaga/genome/: __init__.py  acmg.py  acmg_carrier.py  acmg_sf.py  agi.py  celltype.py  consequence.py  constraint.py  evidence.py  expression.py  gene_disease.py  genemodel.py  genesets.py  genesymbols.py  go_terms.py  inheritance.py  panels.py  panels_diagnostic.py  pgs.py  pl_screen.py  predictors.py  regulatory.py  vrs.py
src/indaga/interfaces/: __init__.py  cli.py  host_install.py  mcp.py
src/indaga/operations/: __init__.py  (+6 more)
src/indaga_gateway/: README.md  __init__.py  __main__.py  app.py  ask.py  auth.py  clinical.py  config.py  context_pool.py  llm.py  phrasing.py
tests/: test_access.py  test_acmg_sf.py  test_allele_safety.py  test_annotations.py  test_confidence_calculus.py  test_conformance_and_envelope.py  test_grounding.py  test_host_install.py  test_jobs.py  test_journal.py  test_mcp.py  test_observability.py  test_schema_validation.py  test_supply_chain.py  test_vrs.py
(+40 files in other folders)
